save: fix to evaluator bug---crucial!